test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/enum_decl.sw
library;

#[storage(invalid)]
#[inline(invalid)]
#[test(invalid)]
//! Invalid inner comment.
#[payable(invalid)]
#[fallback(invalid)]
enum E {
    #[storage(invalid)]
    #[inline(invalid)]
    #[test(invalid)]
    //! Invalid inner comment.
    #[payable(invalid)]
    #[fallback(invalid)]
    A: (),
}
